--- a/app/fe/package.json
+++ b/app/fe/package.json
@@ -11,16 +11,23 @@
   "dependencies": {
     "@blocknote/core": "^0.10.1",
     "@nextui-org/react": "^2.2.9",
+    "@tanstack/react-query": "^5.32.0",
+    "@tanstack/react-query-devtools": "^5.32.0",
     "@tldraw/tldraw": "^1.29.2",
     "@types/aos": "^3.0.7",
+    "@types/three": "^0.164.0",
     "aos": "^3.0.0-beta.6",
-    "framer-motion": "^10.16.16",
+    "framer-motion": "^10.18.0",
     "next": "14.0.2",
+    "next-pwa": "^5.6.0",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-lottie-player": "^1.5.5",
+    "react-lottie-player": "^1.5.6",
     "react-pdf": "^7.5.1",
-    "react-toastify": "^9.1.3"
+    "react-responsive": "^10.0.0",
+    "react-toastify": "^9.1.3",
+    "three": "^0.164.1"
   },
   "devDependencies": {
     "@types/node": "^20",
