--- a/app/fe/package.json
+++ b/app/fe/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query-devtools": "^5.32.0",
     "@tldraw/tldraw": "^1.29.2",
     "@types/aos": "^3.0.7",
+    "@types/react-resizable": "^3.0.7",
     "@types/three": "^0.164.0",
     "aos": "^3.0.0-beta.6",
     "framer-motion": "^10.18.0",
@@ -23,8 +24,10 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-draggable": "^4.4.6",
     "react-lottie-player": "^1.5.6",
     "react-pdf": "^7.5.1",
+    "react-resizable": "^3.0.5",
     "react-responsive": "^10.0.0",
     "react-toastify": "^9.1.3",
     "three": "^0.164.1"
