--- a/app/fe/package.json
+++ b/app/fe/package.json
@@ -18,11 +18,14 @@
     "@types/react-resizable": "^3.0.7",
     "@types/three": "^0.164.0",
     "aos": "^3.0.0-beta.6",
+    "chart.js": "^4.4.2",
+    "devtools-detector": "^2.0.17",
     "framer-motion": "^10.18.0",
     "next": "14.0.2",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
     "react-lottie-player": "^1.5.6",
@@ -30,6 +33,7 @@
     "react-resizable": "^3.0.5",
     "react-responsive": "^10.0.0",
     "react-toastify": "^9.1.3",
+    "reagraph": "^4.17.1",
     "three": "^0.164.1"
   },
   "devDependencies": {
