--- a/app/fe/package.json
+++ b/app/fe/package.json
@@ -34,6 +34,7 @@
     "react-resizable": "^3.0.5",
     "react-responsive": "^10.0.0",
     "react-toastify": "^9.1.3",
+    "react-type-animation": "^3.2.0",
     "reagraph": "^4.17.1",
     "three": "^0.164.1"
   },
