--- a/app/fe/package.json
+++ b/app/fe/package.json
@@ -16,10 +16,14 @@
     "@tanstack/react-query-devtools": "^5.32.0",
     "@tldraw/tldraw": "^1.29.2",
     "@types/aos": "^3.0.7",
+    "@types/d3-scale": "^4.0.8",
+    "@types/d3-scale-chromatic": "^3.0.3",
     "@types/react-resizable": "^3.0.7",
     "@types/three": "^0.164.0",
     "aos": "^3.0.0-beta.6",
     "chart.js": "^4.4.2",
+    "d3-scale": "^4.0.2",
+    "d3-scale-chromatic": "^3.1.0",
     "devtools-detector": "^2.0.17",
     "framer-motion": "^10.18.0",
     "next": "14.0.2",
@@ -27,6 +31,7 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
+    "react-d3-cloud": "^1.0.6",
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
     "react-lottie-player": "^1.5.6",
