--- a/app/fe/package.json
+++ b/app/fe/package.json
@@ -41,7 +41,8 @@
     "react-toastify": "^9.1.3",
     "react-type-animation": "^3.2.0",
     "reagraph": "^4.17.1",
-    "three": "^0.164.1"
+    "three": "^0.164.1",
+    "troika-3d-text": "^0.49.1"
   },
   "devDependencies": {
     "@types/node": "^20",
