--- a/app/fe/package.json
+++ b/app/fe/package.json
@@ -29,6 +29,7 @@
     "next": "14.0.2",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
+    "next-videos": "^1.4.1",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-d3-cloud": "^1.0.6",
@@ -51,6 +52,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.2",
+    "file-loader": "^6.2.0",
     "postcss": "^8",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
