--- a/app/fe/package.json
+++ b/app/fe/package.json
@@ -39,6 +39,7 @@
     "react-pdf": "^7.5.1",
     "react-resizable": "^3.0.5",
     "react-responsive": "^10.0.0",
+    "react-svg-worldmap": "^2.0.0-alpha.16",
     "react-toastify": "^9.1.3",
     "react-type-animation": "^3.2.0",
     "reagraph": "^4.17.1",
