--- a/app/fe/package.json
+++ b/app/fe/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@blocknote/core": "^0.10.1",
+    "@faker-js/faker": "^8.4.1",
     "@nextui-org/react": "^2.2.9",
     "@react-three/drei": "^9.105.5",
     "@tanstack/react-query": "^5.32.0",
@@ -43,6 +44,7 @@
     "react-toastify": "^9.1.3",
     "react-type-animation": "^3.2.0",
     "reagraph": "^4.17.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "three": "^0.164.1",
     "troika-3d-text": "^0.49.1"
   },
