--- a/app/fe/package.json
+++ b/app/fe/package.json
@@ -36,6 +36,7 @@
     "react-d3-cloud": "^1.0.6",
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
+    "react-hot-toast": "^2.4.1",
     "react-lottie-player": "^1.5.6",
     "react-pdf": "^7.5.1",
     "react-resizable": "^3.0.5",
