--- a/app/fe/package.json
+++ b/app/fe/package.json
@@ -12,6 +12,7 @@
     "@blocknote/core": "^0.10.1",
     "@faker-js/faker": "^8.4.1",
     "@nextui-org/react": "^2.2.9",
+    "@react-aria/i18n": "^3.11.1",
     "@react-three/drei": "^9.105.5",
     "@tanstack/react-query": "^5.32.0",
     "@tanstack/react-query-devtools": "^5.32.0",
