--- a/app/fe/package.json
+++ b/app/fe/package.json
@@ -23,6 +23,7 @@
     "@types/react-resizable": "^3.0.7",
     "@types/three": "^0.164.0",
     "aos": "^3.0.0-beta.6",
+    "axios": "^1.7.2",
     "chart.js": "^4.4.2",
     "d3-scale": "^4.0.2",
     "d3-scale-chromatic": "^3.1.0",
