--- a/app/fe/package.json
+++ b/app/fe/package.json
@@ -47,6 +47,7 @@
     "react-toastify": "^9.1.3",
     "react-type-animation": "^3.2.0",
     "reagraph": "^4.17.1",
+    "sharp": "^0.33.4",
     "tailwind-scrollbar-hide": "^1.1.7",
     "three": "^0.164.1",
     "troika-3d-text": "^0.49.1"
