--- a/app/be/Dockerfile
+++ b/app/be/Dockerfile
@@ -1,4 +1,18 @@
-FROM openjdk:17-alpine
-ARG JAR_FILE=/build/libs/be-0.0.1-SNAPSHOT.jar
-COPY ${JAR_FILE} /be.jar
-ENTRYPOINT ["java","-jar","-Dspring.profiles.active=prod", "/be.jar"]
+FROM python:3.8-slim
+
+RUN apt-get update && \
+apt-get -y install sudo
+
+RUN sudo apt install default-jdk -y
+
+WORKDIR /code
+
+COPY ./requirements.txt /code/requirements.txt
+
+RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
+
+# 
+COPY ./ /code/
+
+# 
+CMD ["fastapi", "run", "main.py", "--port", "8081"]
