--- a/app/docker-compose.yaml
+++ b/app/docker-compose.yaml
@@ -96,8 +96,10 @@ services:
   #   networks:
   #     - milipat_network
 # networks:
-#   milipat_network:
-#     driver: bridge
-# networks:
-#   default:
-#     external: true
+# milipat_network:
+#   external: true
+
+networks:
+  default:
+    external: true
+    name: npm
